[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "new_pyproject"
authors = [{name = "Mike Knerr"}]
#authors = [{name = "author", email = "author@email"}]
dynamic = ["version"] #, "description"]
description = "Project template for pypi packages & RTD docs" #2nd line in pypi project page
readme = "README.md"
license = {text = "MIT"}
#license = LICENSE.md" =
license-files = ['LICENSE*']
requires-python = ">=3.6"
keywords = ["python", "packages", "pypi", "RTD", "Sphinx"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/mkner/new-pyproject/"







