[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "basic-pid"
authors = [{name = "Mike Knerr"}]
#authors = [{name = "author", email = "author@email"}]
dynamic = ["version"] 
description = "Basic PID Controller For Discretized Time" #2nd line in pypi project page
readme = "README.md"
license = {text = "MIT"}
#license = LICENSE.md" =
license-files = ['LICENSE*']
requires-python = ">=3.6"
keywords = ["PID", "discrete time", "controllers", "regulators"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/mkner/basic-pid/"







