# version is one source from __init__

[metadata]
name = basic-pid
version = attr: basicpid.__version__ 
author = Mike Knerr
#author_email = name@domain.com
description =  Basic PID Controller For Discretized Time
long_description = file: README.md
#long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
# pypi index project page needs this vers of homepage
home_page = https://github.com/mkner/basic-pid
readme = "README.md"
keywords = PID, discrete time, controllers, regulators,mobile robotics,robotics
#keywords = python, packages
license =   MIT
classifiers = 
   Programming Language :: Python :: 3
   License :: OSI Approved :: MIT License
   Operating System :: OS Independent
   

[options]
packages = find:
install_requires =
    robo-base >= 0.1.3
    
#    somepackage <= 0.4
    

#ok is module export name
# that can be different from package distro name

[options.packages.find]
include = basicpid*

#
